@@ -58,7 +58,7 @@ namespace {
 			, end(p.dht_nodes.end()); i != end; ++i)
 			tracker_list.append(boost::python::make_tuple(i->first, i->second));
 		ret["dht_nodes"] =  nodes_list;
-		ret["info_hash"] = p.info_hash;
+		ret["info_hash"] = p.info_hash.to_string();
 		ret["name"] = p.name;
 		ret["save_path"] = p.save_path;
 		ret["storage_mode"] = p.storage_mode;
