@@ -1,3 +1,4 @@
+	* fix python binding for parse_magnet_uri
 	* fix minor robustness issue in DHT bootstrap logic
 	* fix issue where torrent_status::num_seeds could be negative
 	* document deprecation of dynamic loading/unloading of torrents
